2004-10-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-context-properties.scm
	(all-user-translation-properties): add verticallySpacedContexts.

	* scm/define-grob-interfaces.scm (vertically-spaceable-interface):
	add interface

	* scm/define-grob-properties.scm (all-internal-grob-properties):
	add spaceable-staves

	* scm/define-grobs.scm (all-grob-descriptions): set
	vertically-spaceable-interface for VerticalAxisGroup and
	RemoveEmptyVerticalGroup

	* lily/system.cc (get_line): determine staff_refpoints_
	using spaceable-staves.

	* lily/score-engraver.cc (acknowledge_grob): ack
	vertically-spaceable-interface and verticallySpacedContexts to
	set spaceable-staves.

	* input/regression/new-slur.ly: add slur under 16th subbeam case.

	* lily/slur-scoring.cc (fill): init has_same_beam_ before use.

2004-10-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/mutopia/F.Schubert/morgenlied.ly (pianoLH): tune
	minimumVerticalExtent tweaks. 
 
	* mf/feta-schrift.mf: include size of thumb appendix in
	bbox. Fixes: c-thumb-notehead.ly  

	* THANKS: add Meisters to the Development team.

	* scm/framework-tex.scm (convert-to-dvi): redirect output to
	/dev/null for non-verbose.

	* Documentation/user/invoking.itely (Invoking lilypond): add note
	about resource usage.

	* tex/GNUmakefile (TEX_FILES): add texinfo.cnf

	* stepmake/stepmake/texinfo-vars.make (MAKEINFO): add
	--enable-encoding

	* Documentation/user/lilypond.tely: add -*- coding: latin-1 -*- everywhere. 

	* Documentation/user/changing-defaults.itely (Text encoding):
	change to latin1.

	* Documentation/user/lilypond.tely: add language and encoding.

	* scm/define-grobs.scm (all-grob-descriptions): add
	line-interface.

	* configure.in (PKG_CONFIG_PATH): bump makeinfo version to 4.7

	* input/test/ossia.ly: font sizes for ossia.

	* scripts/convert-ly.py (conv): \context Foo = NOTENAME
	-> \context Foo = "NOTENAME".

	* lily/main.cc (determine_output_options): fix ordering.
