@@ -1,3 +1,9 @@
+2004-10-25  Werner Lemberg  <wl@gnu.org>
+
+	* scripts/lilypond-book.py: s/option-sep/option_sep/.
+	(format_res) [LATEX, TEXINFO]: Skip whitespace before comma also.
+	Some formatting to get more consistency.
+
 2004-10-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* scm/define-context-properties.scm
